# phononic

./: Cargo.toml  flake.nix
src/: main.rs  setup.rs  simulate.rs
src/meshes/: 2d_layered.geo  2d_layered.msh
