[package]
name = "phononic"
version = "0.1.0"
edition = "2021"

# dexterior from git or path for convenience during development
[dependencies.dexterior]
# version = 0.3.0
features = ["visuals"]
git = "https://github.com/m0lentum/dexterior.git"
rev = "3829d8f060d2a3a91ef66d8d6435ebaa535c560d"
# path = "../dexterior/crates/dexterior/"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
itertools = "0.14.0"
rayon = "1.10.0"

[profile.dev]
opt-level = 2
